# MMC

./: MMC_Feasibility_Analysis.md  MMC_Project_Charter.md  MMC_Requirements_Level1_Raw.md  MMC_Requirements_Level2_Initial.md  MMC_Requirements_Level3_System.md  MMC_Test_Report.md  MMC_Test_Report_20260615.md  README.md  pubspec.yaml
.github/workflows/: build-android-apk.yml  build.yml  windows-build.yml
android/app/src/main/kotlin/com/example/mmc/: MainActivity.kt
docs/: 01-RR-初始需求.md  02-IR-原始需求.md  03-SR-系统需求.md
ios/Runner/: AppDelegate.swift
lib/: main.dart
lib/core/constants/: app_constants.dart
lib/core/errors/: app_exception.dart
lib/core/pages/: splash_page.dart
lib/core/router/: app_router.dart
lib/core/theme/: app_theme.dart
lib/features/device_discovery/pages/: discovery_page.dart
lib/features/device_discovery/providers/: discovery_provider.dart
lib/features/device_management/pages/: device_detail_page.dart  home_page.dart
lib/features/device_management/providers/: device_list_provider.dart
lib/features/file_transfer/pages/: file_transfer_page.dart
lib/features/file_transfer/providers/: file_transfer_provider.dart
lib/features/remote_control/pages/: remote_control_page.dart
lib/features/remote_control/providers/: remote_control_provider.dart
lib/models/: device.dart  device_type_extension.dart  screen_frame.dart  transfer_task.dart
lib/protocols/: discovery_protocol.dart  transport_protocol.dart
lib/services/: connection_service.dart  control_service.dart  device_repository.dart  discovery_service.dart  file_transfer_service.dart
mmc/: README.md
mmc/.github/workflows/: build.yml
mmc/mmc-core/: Cargo.toml  Cross.toml  Makefile
mmc/mmc-core/bindings/gui/: index.html
mmc/mmc-core/crates/mmc-clipboard/: Cargo.toml
mmc/mmc-core/crates/mmc-clipboard/src/: error.rs  frame_transport.rs  lib.rs  manager.rs  sync.rs
mmc/mmc-core/crates/mmc-clipboard/tests/: e2e.rs  integration.rs
mmc/mmc-core/crates/mmc-core-uniffi/: Cargo.toml  Cargo.toml.android.toml  build.rs
mmc/mmc-core/crates/mmc-core-uniffi/bindings/android/: build.gradle  gradlew  settings.gradle
mmc/mmc-core/crates/mmc-core-uniffi/bindings/android/app/: build.gradle  proguard-rules.pro
mmc/mmc-core/crates/mmc-core-uniffi/bindings/android/app/src/main/: AndroidManifest.xml
mmc/mmc-core/crates/mmc-core-uniffi/bindings/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mmc/mmc-core/crates/mmc-core-uniffi/bindings/android/app/src/main/java/com/example/mmc/: ClipboardMonitor.kt  InputService.kt  MainActivity.kt  MediaCapture.kt  ScreenCaptureService.kt  TransferForegroundService.kt
mmc/mmc-core/crates/mmc-core-uniffi/bindings/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
mmc/mmc-core/crates/mmc-core-uniffi/bindings/android/app/src/main/res/layout/: activity_main.xml
mmc/mmc-core/crates/mmc-core-uniffi/bindings/android/app/src/main/res/mipmap-xhdpi/: ic_launcher_round.xml
mmc/mmc-core/crates/mmc-core-uniffi/bindings/android/app/src/main/res/mipmap-xxhdpi/: ic_launcher.xml
mmc/mmc-core/crates/mmc-core-uniffi/bindings/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
mmc/mmc-core/crates/mmc-core-uniffi/bindings/android/app/src/main/res/xml/: accessibility_service_config.xml  backup_rules.xml  data_extraction_rules.xml
mmc/mmc-core/crates/mmc-core-uniffi/bindings/ios/: LICENSE  MmcCore.podspec
mmc/mmc-core/crates/mmc-core-uniffi/bindings/ios/MmcCore/Classes/: ClipboardMonitor.swift  MmcCore.swift  MmcCoreBridge.swift  ScreenCaptureService.swift  TransferService.swift
mmc/mmc-core/crates/mmc-core-uniffi/scripts/: generate_android_bindings.rs
mmc/mmc-core/crates/mmc-core-uniffi/src/: android.rs  core.rs  error.rs  lib.rs  mmc_core.udl  types.rs
mmc/mmc-core/crates/mmc-core-uniffi/tests/: uniffi_tests.rs
mmc/mmc-core/crates/mmc-desktop-app/: Cargo.toml
mmc/mmc-core/crates/mmc-desktop-app/src/: clipboard.rs  commands.rs  error.rs  lib.rs  main.rs  state.rs
mmc/mmc-core/crates/mmc-discovery/: Cargo.toml
mmc/mmc-core/crates/mmc-discovery/src/: discovery.rs  error.rs  lib.rs  network.rs
mmc/mmc-core/crates/mmc-file-transfer/: Cargo.toml
mmc/mmc-core/crates/mmc-file-transfer/src/: error.rs  lib.rs  transfer.rs
mmc/mmc-core/crates/mmc-gui-app/: Cargo.toml
mmc/mmc-core/crates/mmc-gui-app/src/: app.rs  http_server.rs  main.rs  platform.rs
mmc/mmc-core/crates/mmc-media-service/: Cargo.toml
mmc/mmc-core/crates/mmc-media-service/src/: audio.rs  codec.rs  error.rs  input.rs  lib.rs  platform.rs  platform_android.rs  platform_windows.rs  session.rs  video.rs
mmc/mmc-core/crates/mmc-pairing/: Cargo.toml
mmc/mmc-core/crates/mmc-pairing/src/: error.rs  lib.rs  pairing.rs
mmc/mmc-core/crates/mmc-protocol/: Cargo.toml  build.rs
mmc/mmc-core/crates/mmc-protocol/src/: lib.rs  mmc.v1.rs  protobuf.rs
mmc/mmc-core/crates/mmc-security/: Cargo.toml
mmc/mmc-core/crates/mmc-security/src/: cert.rs  crypto.rs  error.rs  lib.rs  tls.rs
mmc/mmc-core/crates/mmc-storage/: Cargo.toml
mmc/mmc-core/crates/mmc-storage/src/: db.rs  error.rs  lib.rs
mmc/mmc-core/crates/mmc-transport/: Cargo.toml
mmc/mmc-core/crates/mmc-transport/src/: connection.rs  error.rs  frame.rs  heartbeat.rs  lib.rs
mmc/mmc-core/crates/uniffi-bindgen/: Cargo.toml
mmc/mmc-core/crates/uniffi-bindgen/src/: main.rs
mmc/mmc-core/proto/mmc/v1/: mmc.proto
test/core/: app_constants_test.dart
test/features/: device_list_provider_test.dart
test/models/: device_test.dart  transfer_task_test.dart
test/pages/: splash_page_test.dart
test/protocols/: transport_protocol_test.dart
