[workspace]
resolver = "2"
members = [
    "crates/mmc-protocol",
    "crates/mmc-security",
    "crates/mmc-discovery",
    "crates/mmc-pairing",
    "crates/mmc-file-transfer",
    "crates/mmc-storage",
    "crates/mmc-transport",
    "crates/mmc-clipboard",
    "crates/mmc-core-uniffi",
    "crates/mmc-media-service",
    "crates/mmc-desktop-app",
    "crates/mmc-gui-app",
    "crates/uniffi-bindgen",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MMC Team"]
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Protobuf
prost = "0.12"
prost-build = "0.12"

# Encryption & TLS
rustls = "0.22"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
blake3 = "1.5"
zeroize = { version = "1.7", features = ["derive"] }
chacha20poly1305 = "0.10"

# Networking
async-trait = "0.1"
futures = "0.3"
mdns-sd = "0.8"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utils
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

# Build dependencies
uniffi-bindgen = "0.29"
build-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
