[package]
name = "mmc-core-uniffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "mmc_core"

[dependencies]
mmc-protocol = { path = "../mmc-protocol" }
mmc-security = { path = "../mmc-security" }
mmc-discovery = { path = "../mmc-discovery" }
mmc-pairing = { path = "../mmc-pairing" }
mmc-file-transfer = { path = "../mmc-file-transfer" }
mmc-storage = { path = "../mmc-storage" }
mmc-media-service = { path = "../mmc-media-service" }

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hostname = "0.4"
bytes = "1.6"
rand = "0.8"
uniffi = "0.29"

[build-dependencies]
uniffi_bindgen = "0.29"
camino = "1.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
serde_json = "1.0"

[features]
default = []
uniffi = []
