[package]
name = "mmc-discovery"
version.workspace = true
edition.workspace = true

[dependencies]
mdns-sd = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
mmc-protocol = { path = "../mmc-protocol" }

[dev-dependencies]
tokio-test = "0.4"
