[package]
name = "mmc-file-transfer"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.6"
tokio.workspace = true
futures.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
blake3.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
