[package]
name = "mmc-gui-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mmc-gui"
path = "src/main.rs"

[dependencies]
# GUI Framework
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui_extras = { version = "0.29", features = ["image"] }

# Core modules
mmc-protocol = { path = "../mmc-protocol" }
mmc-transport = { path = "../mmc-transport" }
mmc-discovery = { path = "../mmc-discovery" }
mmc-pairing = { path = "../mmc-pairing" }
mmc-file-transfer = { path = "../mmc-file-transfer" }
mmc-clipboard = { path = "../mmc-clipboard" }
mmc-media-service = { path = "../mmc-media-service" }
mmc-security = { path = "../mmc-security" }
mmc-storage = { path = "../mmc-storage" }
mmc-core-uniffi = { path = "../mmc-core-uniffi" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Web server for embedded HTML
tiny_http = "0.12"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hostname = "0.4"
image = "0.25"
rand = { workspace = true }

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

# Clipboard
arboard = "3.4"

[features]
default = ["clipboard"]
clipboard = []
