[package]
name = "mmc-security"
version.workspace = true
edition.workspace = true

[dependencies]
rustls = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
zeroize = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
