[package]
name = "mmc-storage"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
