[package]
name = "mmc-transport"
version.workspace = true
edition.workspace = true

[dependencies]
mmc-protocol = { path = "../mmc-protocol" }
mmc-security = { path = "../mmc-security" }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
bytes = "1.6"
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"